# gnubg

./: .gitignore  .indent.pro  ChangeLog  Makefile.am  analysis.c  autogen.sh  backgammon.h  commands.inc  configure.ac  copying.awk  eval.c  external.c  gnubgmodule.c  gtkgame.c  gtkmet.c  gtkoptions.c  gtkrelational.c  gtktoolbar.c  makebearoff.c  makehyper.c  meson.build  mtsupport.c  multithread.c  play.c  progress.c  rollout.c  set.c  show.c  simpleboard.c  speed.c
board3d/: DrawOGL.c  PickOGL.c  drawboard3d.c  font3d.c  fun3d.h
doc/: .gitignore  gnubgman.xml
doc/gnubg/: gnubg.6
po/: POTFILES.in  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  gnubg.pot  is.po  it.po  ja.po  ro.po  ru.po  tr.po
