project('gnubg', 'c')

glib_dep = dependency('glib-2.0')
readline_dep = dependency('readline')

src = [
'SFMT.c',
'copying.c',
'export.c',
'glib-ext.c',
'inputs.c',
'matchequity.c',
'neuralnetsse.c',
'randomorg.c',
'sgf_l.c',
'timer.c',
'analysis.c',
'credits.c',
'external.c',
'gnubg.c',
'isaac.c',
'matchid.c',
'openurl.c',
'relational.c',
'sgf_y.c',
'util.c',
'bearoff.c',
'dbprovider.c',
'external_l.c',
'gnubgmodule.c',
'latex.c',
'md5.c',
'osr.c',
'render.c',
'show.c',
'bearoffdump.c',
'dice.c',
'external_y.c',
'list.c',
'mec.c',
'output.c',
'renderprefs.c',
'simpleboard.c',
'bearoffgammon.c',
'drawboard.c',
'file.c',
'html.c',
'makebearoff.c',
'mtsupport.c',
'play.c',
'rollout.c',
'sound.c',
'boardpos.c',
'eval.c',
'format.c',
'htmlimages.c',
'makehyper.c',
'multithread.c',
'positionid.c',
'set.c',
'speed.c',
'cache.c',
'evallock.c',
'formatgs.c',
'import.c',
'makeweights.c',
'neuralnet.c',
'progress.c',
'sgf.c',
'text.c'
]


executable('gnubg', sources : src, dependencies : [glib_dep, readline_dep])
